open external console for python

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
                 "WaitOnNormalExit",
                 "RedirectOutput"
             ],
-            "args": ["-mmotordummy"]
+            "args": ["-mmotordummy"],
+             "externalConsole" : true
         },
         {
             "name": "Python Console App",
